@@ -3,4 +3,5 @@
 this repository contains the full copyright notices and license terms. -->
 <tree string="Menu" keyword_open="1">
     <field name="name" icon="icon" expand="1"/>
+    <field name="favorite" tree_invisible="1"/>
 </tree>
